[gd_scene load_steps=5 format=3 uid="uid://fm2wc8cg2syg"]

[ext_resource type="Script" path="res://Scenes/farm.gd" id="1_lvhtj"]
[ext_resource type="Texture2D" uid="uid://csvtdvdrgbyjn" path="res://Assets/spritesheet.png" id="2_d2fjf"]
[ext_resource type="Texture2D" uid="uid://bjqjeth2ji61l" path="res://Assets/Buildings/construction_site_a.png" id="3_uneby"]

[sub_resource type="AtlasTexture" id="AtlasTexture_0cg2v"]
atlas = ExtResource("2_d2fjf")
region = Rect2(134.68, 350.766, 134, 71)

[node name="BuildProcess" type="Node2D"]
script = ExtResource("1_lvhtj")

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
position = Vector2(68, 36)
texture = SubResource("AtlasTexture_0cg2v")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = 1.33333
offset_top = 50.3333
offset_right = 145.333
offset_bottom = 78.3333
color = Color(0.301961, 0.301961, 0.301961, 0.74902)

[node name="Label" type="Label" parent="ColorRect"]
layout_mode = 0
offset_left = 5.0
offset_right = 86.0
offset_bottom = 26.0
text = "Name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ColorRect2" type="ColorRect" parent="."]
offset_left = 1.33333
offset_top = 77.3333
offset_right = 145.333
offset_bottom = 107.333
color = Color(1, 1, 1, 0.607843)
metadata/_edit_group_ = true

[node name="Label" type="Label" parent="ColorRect2"]
layout_mode = 0
offset_right = 101.0
offset_bottom = 31.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "âš¡        ðŸ’°         "
vertical_alignment = 1

[node name="Label2" type="Label" parent="ColorRect2"]
layout_mode = 0
offset_left = 18.6667
offset_top = 3.0
offset_right = 46.6667
offset_bottom = 26.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label3" type="Label" parent="ColorRect2"]
layout_mode = 0
offset_left = 72.0
offset_top = 4.0
offset_right = 99.0
offset_bottom = 27.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
horizontal_alignment = 1

[node name="Button" type="Button" parent="."]
visible = false
offset_left = 53.3334
offset_top = 17.0
offset_right = 81.3334
offset_bottom = 48.0
text = "+"

[node name="Label" type="Label" parent="."]
offset_top = -38.3333
offset_right = 135.0
offset_bottom = 3.66666
theme_override_font_sizes/font_size = 30
text = "ðŸ•’"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ConstructionSiteA" type="Sprite2D" parent="."]
position = Vector2(73, 25)
scale = Vector2(0.75, 0.75)
texture = ExtResource("3_uneby")
